--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -64,21 +64,21 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
+      # - name: Set up Python
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install docker
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install docker
 
       # - name: Build Docker Image with Flux
       #   run: python build_docker.py comfyui-with-flux
 
       - name: Build Docker Image without Flux
-        run: python build_docker.py comfyui-without-flux
+        run: dockr build --progress=plain -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} comfyui-without-flux
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
