Try build without cogvideoxwrapper

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -230,11 +230,11 @@ RUN mkdir -p /ComfyUI/models/insightface && \
 RUN cd /ComfyUI/custom_nodes && \
     git clone https://github.com/chrisgoringe/cg-use-everywhere.git
 
-# ComfyUI-CogVideoXWrapper
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-CogVideoXWrapper.git && \
-    cd ComfyUI-CogVideoXWrapper && \
-    pip3 install -r requirements.txt
+# # ComfyUI-CogVideoXWrapper
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/kijai/ComfyUI-CogVideoXWrapper.git && \
+#     cd ComfyUI-CogVideoXWrapper && \
+#     pip3 install -r requirements.txt
 
 # AI-Toolkit
 RUN cd / && \
