--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -109,121 +109,121 @@ RUN cd /ComfyUI/custom_nodes && \
     cd ComfyUI-KJNodes && \
     pip3 install -r requirements.txt
 
-# # rgthree
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/rgthree/rgthree-comfy.git && \
-#     cd rgthree-comfy && \
-#     pip3 install -r requirements.txt
+# rgthree
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/rgthree/rgthree-comfy.git && \
+    cd rgthree-comfy && \
+    pip3 install -r requirements.txt
 
-# # JPS-Nodes
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/JPS-GER/ComfyUI_JPS-Nodes.git
+# JPS-Nodes
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/JPS-GER/ComfyUI_JPS-Nodes.git
 
-# # Comfyrol Studio
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git
+# Comfyrol Studio
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git
 
-# # comfy-plasma
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/Jordach/comfy-plasma.git
+# comfy-plasma
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/Jordach/comfy-plasma.git
 
-# # ComfyUI-VideoHelperSuite
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite.git && \
-#     cd ComfyUI-VideoHelperSuite && \
-#     pip3 install -r requirements.txt
+# ComfyUI-VideoHelperSuite
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite.git && \
+    cd ComfyUI-VideoHelperSuite && \
+    pip3 install -r requirements.txt
 
-# # ComfyUI-AdvancedLivePortrait
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/PowerHouseMan/ComfyUI-AdvancedLivePortrait.git && \
-#     cd ComfyUI-AdvancedLivePortrait && \
-#     pip3 install -r requirements.txt
+# ComfyUI-AdvancedLivePortrait
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/PowerHouseMan/ComfyUI-AdvancedLivePortrait.git && \
+    cd ComfyUI-AdvancedLivePortrait && \
+    pip3 install -r requirements.txt
 
-# # ComfyUI-Impact-Subpack
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/ltdrdata/ComfyUI-Impact-Pack.git && \
-#     cd ComfyUI-Impact-Pack && \
-#     pip3 install -r requirements.txt && \
-#     python3 install.py
+# ComfyUI-Impact-Subpack
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/ltdrdata/ComfyUI-Impact-Pack.git && \
+    cd ComfyUI-Impact-Pack && \
+    pip3 install -r requirements.txt && \
+    python3 install.py
 
-# # ComfyUI-Impact-Subpack
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/ltdrdata/ComfyUI-Impact-Subpack && \
-#     cd ComfyUI-Impact-Subpack && \
-#     pip3 install -r requirements.txt
+# ComfyUI-Impact-Subpack
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/ltdrdata/ComfyUI-Impact-Subpack && \
+    cd ComfyUI-Impact-Subpack && \
+    pip3 install -r requirements.txt
 
-# # make directory and download face_yolov8m.pt
-# RUN mkdir -p /ComfyUI/models/ultralytics/bbox && \
-#     wget -q "https://huggingface.co/Bingsu/adetailer/resolve/main/face_yolov8m.pt?download=true" -O /ComfyUI/models/ultralytics/bbox/face_yolov8m.pt
+# make directory and download face_yolov8m.pt
+RUN mkdir -p /ComfyUI/models/ultralytics/bbox && \
+    wget -q "https://huggingface.co/Bingsu/adetailer/resolve/main/face_yolov8m.pt?download=true" -O /ComfyUI/models/ultralytics/bbox/face_yolov8m.pt
 
-# # ComfyUI-Impact-controlnet_aux
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/Fannovel16/comfyui_controlnet_aux.git && \
-#     cd comfyui_controlnet_aux && \
-#     pip3 install -r requirements.txt
+# ComfyUI-Impact-controlnet_aux
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/Fannovel16/comfyui_controlnet_aux.git && \
+    cd comfyui_controlnet_aux && \
+    pip3 install -r requirements.txt
 
-# # ComfyUI-UltimateSDUpscale
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive
+# ComfyUI-UltimateSDUpscale
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive
 
-# # ComfyUI-Easy-Use
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/yolain/ComfyUI-Easy-Use.git && \
-#     cd ComfyUI-Easy-Use && \
-#     pip3 install -r requirements.txt
+# ComfyUI-Easy-Use
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/yolain/ComfyUI-Easy-Use.git && \
+    cd ComfyUI-Easy-Use && \
+    pip3 install -r requirements.txt
 
-# # ComfyUI-Florence2
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/kijai/ComfyUI-Florence2.git && \
-#     cd ComfyUI-Florence2 && \
-#     pip3 install -r requirements.txt && \
-#     mkdir /ComfyUI/models/LLM
+# ComfyUI-Florence2
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/kijai/ComfyUI-Florence2.git && \
+    cd ComfyUI-Florence2 && \
+    pip3 install -r requirements.txt && \
+    mkdir /ComfyUI/models/LLM
 
-# # was-node-suite-comfyui
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/WASasquatch/was-node-suite-comfyui.git && \
-#     cd was-node-suite-comfyui && \
-#     pip3 install -r requirements.txt
+# was-node-suite-comfyui
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/WASasquatch/was-node-suite-comfyui.git && \
+    cd was-node-suite-comfyui && \
+    pip3 install -r requirements.txt
 
-# # ComfyUI-Logic
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/theUpsider/ComfyUI-Logic.git
+# ComfyUI-Logic
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/theUpsider/ComfyUI-Logic.git
 
-# # ComfyUI_essentials
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/cubiq/ComfyUI_essentials.git && \
-#     cd ComfyUI_essentials && \
-#     pip3 install -r requirements.txt
+# ComfyUI_essentials
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/cubiq/ComfyUI_essentials.git && \
+    cd ComfyUI_essentials && \
+    pip3 install -r requirements.txt
 
-# # cg-image-picker
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/chrisgoringe/cg-image-picker.git
+# cg-image-picker
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/chrisgoringe/cg-image-picker.git
 
-# # ComfyUI_LayerStyle
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/chflame163/ComfyUI_LayerStyle.git && \
-#     cd ComfyUI_LayerStyle && \
-#     pip3 install -r requirements.txt
+# ComfyUI_LayerStyle
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/chflame163/ComfyUI_LayerStyle.git && \
+    cd ComfyUI_LayerStyle && \
+    pip3 install -r requirements.txt
 
-# # Ccomfyui-mixlab-nodes
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/shadowcz007/comfyui-mixlab-nodes.git && \
-#     cd comfyui-mixlab-nodes && \
-#     pip3 install -r requirements.txt
+# Ccomfyui-mixlab-nodes
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/shadowcz007/comfyui-mixlab-nodes.git && \
+    cd comfyui-mixlab-nodes && \
+    pip3 install -r requirements.txt
 
-# # comfyui-reactor-node
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://codeberg.org/Gourieff/comfyui-reactor-node.git && \
-#     cd comfyui-reactor-node && \
-#     pip3 install -r requirements.txt
+# comfyui-reactor-node
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://codeberg.org/Gourieff/comfyui-reactor-node.git && \
+    cd comfyui-reactor-node && \
+    pip3 install -r requirements.txt
 
-# # make the directory and download the swap_model file
-# RUN mkdir -p /ComfyUI/models/insightface && \
-#     wget -q "https://huggingface.co/ezioruan/inswapper_128.onnx/resolve/main/inswapper_128.onnx?download=true" -O /ComfyUI/models/insightface/inswapper_128.onnx
+# make the directory and download the swap_model file
+RUN mkdir -p /ComfyUI/models/insightface && \
+    wget -q "https://huggingface.co/ezioruan/inswapper_128.onnx/resolve/main/inswapper_128.onnx?download=true" -O /ComfyUI/models/insightface/inswapper_128.onnx
 
-# # cg-use-everywhere
-# RUN cd /ComfyUI/custom_nodes && \
-#     git clone https://github.com/chrisgoringe/cg-use-everywhere.git
+# cg-use-everywhere
+RUN cd /ComfyUI/custom_nodes && \
+    git clone https://github.com/chrisgoringe/cg-use-everywhere.git
 
 # # ComfyUI-CogVideoXWrapper
 # RUN cd /ComfyUI/custom_nodes && \
