Disable comfyui-reactor-node due to reliance on old numpy

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -211,11 +211,12 @@ RUN cd /ComfyUI/custom_nodes && \
     cd comfyui-mixlab-nodes && \
     pip3 install -r requirements.txt
 
-# comfyui-reactor-node
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://codeberg.org/Gourieff/comfyui-reactor-node.git && \
-    cd comfyui-reactor-node && \
-    pip3 install -r requirements.txt
+## WARNING this module currently relies on an old numpy and is therefore excluded
+# # comfyui-reactor-node
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://codeberg.org/Gourieff/comfyui-reactor-node.git && \
+#     cd comfyui-reactor-node && \
+#     pip3 install -r requirements.txt
 
 # make the directory and download the swap_model file
 RUN mkdir -p /ComfyUI/models/insightface && \
