GH Runner out of resources. So, add docs and comment out the nodes ready for extraction.

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -1,5 +1,10 @@
 FROM pytorch/pytorch:2.8.0-cuda12.9-cudnn9-runtime AS comfyui
 
+# RunPod Pods run from a Docker image, thus everything we ship needs to be in this Dockerfile and copied into the image.
+# However, for persistence across multiple Pods, we use a volume mounted to /workspace, so anything that needs to be persistent should be in /workspace.
+# Thus, we copy scripts to /workspace and run them from there.
+# Everything intended for ComfyUI itself should be in /ComfyUI, which is created when we clone the repo, and added to.
+
 ENV PATH="/usr/local/cuda/bin:${PATH}"
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -49,14 +54,14 @@ EXPOSE 8188
 # Download and move flux_dev_example.png
 RUN wget -q "https://github.com/comfyanonymous/ComfyUI_examples/blob/master/flux/flux_dev_example.png" -P /ComfyUI
 
-# Install Xlabs-AI/flux-RealismLora
+# For Xlabs-AI/flux-RealismLora and others
 RUN apt-get install -y libgl1-mesa-glx libglib2.0-0 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/XLabs-AI/x-flux-comfyui.git && \
-    cd x-flux-comfyui && \
-    python3 setup.py
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/XLabs-AI/x-flux-comfyui.git && \
+#     cd x-flux-comfyui && \
+#     python3 setup.py
 
 # This is a hacky way to change the default workflow on startup, but it works
 COPY --chmod=644 defaultGraph.json /defaultGraph.json
@@ -74,12 +79,12 @@ EXPOSE 8888
 
 FROM with_jupyter AS final
 
-# Add some additional custom nodes
-# LDSR Upscale
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/flowtyone/ComfyUI-Flowty-LDSR.git && \
-    cd ComfyUI-Flowty-LDSR && \
-    pip3 install -r requirements.txt
+# # Add some additional custom nodes
+# # LDSR Upscale
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/flowtyone/ComfyUI-Flowty-LDSR.git && \
+#     cd ComfyUI-Flowty-LDSR && \
+#     pip3 install -r requirements.txt
 
 # Add download scripts for additional models
 COPY --chmod=755 download_Controlnet.sh /download_Controlnet.sh
@@ -97,119 +102,119 @@ COPY --chmod=755 download_Files.sh /download_Files.sh
 COPY --chmod=755 download_wan2.1.sh /download_wan2.1.sh
 COPY --chmod=755 disable_mixlab.sh /disable_mixlab.sh
 
-# SUPIR Upscale
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-SUPIR.git && \
-    cd ComfyUI-SUPIR && \
-    pip3 install -r requirements.txt
+# # SUPIR Upscale
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/kijai/ComfyUI-SUPIR.git && \
+#     cd ComfyUI-SUPIR && \
+#     pip3 install -r requirements.txt
 
-# KJNodes
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-KJNodes.git && \
-    cd ComfyUI-KJNodes && \
-    pip3 install -r requirements.txt
+# # KJNodes
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/kijai/ComfyUI-KJNodes.git && \
+#     cd ComfyUI-KJNodes && \
+#     pip3 install -r requirements.txt
 
-# rgthree
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/rgthree/rgthree-comfy.git && \
-    cd rgthree-comfy && \
-    pip3 install -r requirements.txt
+# # rgthree
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/rgthree/rgthree-comfy.git && \
+#     cd rgthree-comfy && \
+#     pip3 install -r requirements.txt
 
-# JPS-Nodes
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/JPS-GER/ComfyUI_JPS-Nodes.git
+# # JPS-Nodes
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/JPS-GER/ComfyUI_JPS-Nodes.git
 
-# Comfyrol Studio
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git
+# # Comfyrol Studio
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git
 
-# comfy-plasma
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/Jordach/comfy-plasma.git
+# # comfy-plasma
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/Jordach/comfy-plasma.git
 
-# ComfyUI-VideoHelperSuite
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite.git && \
-    cd ComfyUI-VideoHelperSuite && \
-    pip3 install -r requirements.txt
+# # ComfyUI-VideoHelperSuite
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite.git && \
+#     cd ComfyUI-VideoHelperSuite && \
+#     pip3 install -r requirements.txt
 
-# ComfyUI-AdvancedLivePortrait
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/PowerHouseMan/ComfyUI-AdvancedLivePortrait.git && \
-    cd ComfyUI-AdvancedLivePortrait && \
-    pip3 install -r requirements.txt
+# # ComfyUI-AdvancedLivePortrait
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/PowerHouseMan/ComfyUI-AdvancedLivePortrait.git && \
+#     cd ComfyUI-AdvancedLivePortrait && \
+#     pip3 install -r requirements.txt
 
-# ComfyUI-Impact-Subpack
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/ltdrdata/ComfyUI-Impact-Pack.git && \
-    cd ComfyUI-Impact-Pack && \
-    pip3 install -r requirements.txt && \
-    python3 install.py
+# # ComfyUI-Impact-Subpack
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/ltdrdata/ComfyUI-Impact-Pack.git && \
+#     cd ComfyUI-Impact-Pack && \
+#     pip3 install -r requirements.txt && \
+#     python3 install.py
 
-# ComfyUI-Impact-Subpack
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/ltdrdata/ComfyUI-Impact-Subpack && \
-    cd ComfyUI-Impact-Subpack && \
-    pip3 install -r requirements.txt
+# # ComfyUI-Impact-Subpack
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/ltdrdata/ComfyUI-Impact-Subpack && \
+#     cd ComfyUI-Impact-Subpack && \
+#     pip3 install -r requirements.txt
 
 # make directory and download face_yolov8m.pt
 RUN mkdir -p /ComfyUI/models/ultralytics/bbox && \
     wget -q "https://huggingface.co/Bingsu/adetailer/resolve/main/face_yolov8m.pt?download=true" -O /ComfyUI/models/ultralytics/bbox/face_yolov8m.pt
 
-# ComfyUI-Impact-controlnet_aux
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/Fannovel16/comfyui_controlnet_aux.git && \
-    cd comfyui_controlnet_aux && \
-    pip3 install -r requirements.txt
+# # ComfyUI-Impact-controlnet_aux
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/Fannovel16/comfyui_controlnet_aux.git && \
+#     cd comfyui_controlnet_aux && \
+#     pip3 install -r requirements.txt
 
-# ComfyUI-UltimateSDUpscale
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive
+# # ComfyUI-UltimateSDUpscale
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive
 
-# ComfyUI-Easy-Use
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/yolain/ComfyUI-Easy-Use.git && \
-    cd ComfyUI-Easy-Use && \
-    pip3 install -r requirements.txt
+# # ComfyUI-Easy-Use
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/yolain/ComfyUI-Easy-Use.git && \
+#     cd ComfyUI-Easy-Use && \
+#     pip3 install -r requirements.txt
 
-# ComfyUI-Florence2
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-Florence2.git && \
-    cd ComfyUI-Florence2 && \
-    pip3 install -r requirements.txt && \
-    mkdir /ComfyUI/models/LLM
+# # ComfyUI-Florence2
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/kijai/ComfyUI-Florence2.git && \
+#     cd ComfyUI-Florence2 && \
+#     pip3 install -r requirements.txt && \
+#     mkdir /ComfyUI/models/LLM
 
-# was-node-suite-comfyui
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/WASasquatch/was-node-suite-comfyui.git && \
-    cd was-node-suite-comfyui && \
-    pip3 install -r requirements.txt
+# # was-node-suite-comfyui
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/WASasquatch/was-node-suite-comfyui.git && \
+#     cd was-node-suite-comfyui && \
+#     pip3 install -r requirements.txt
 
-# ComfyUI-Logic
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/theUpsider/ComfyUI-Logic.git
+# # ComfyUI-Logic
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/theUpsider/ComfyUI-Logic.git
 
-# ComfyUI_essentials
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/cubiq/ComfyUI_essentials.git && \
-    cd ComfyUI_essentials && \
-    pip3 install -r requirements.txt
+# # ComfyUI_essentials
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/cubiq/ComfyUI_essentials.git && \
+#     cd ComfyUI_essentials && \
+#     pip3 install -r requirements.txt
 
-# cg-image-picker
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/chrisgoringe/cg-image-picker.git
+# # cg-image-picker
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/chrisgoringe/cg-image-picker.git
 
-# ComfyUI_LayerStyle
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/chflame163/ComfyUI_LayerStyle.git && \
-    cd ComfyUI_LayerStyle && \
-    pip3 install -r requirements.txt
+# # ComfyUI_LayerStyle
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/chflame163/ComfyUI_LayerStyle.git && \
+#     cd ComfyUI_LayerStyle && \
+#     pip3 install -r requirements.txt
 
-# Ccomfyui-mixlab-nodes
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/shadowcz007/comfyui-mixlab-nodes.git && \
-    cd comfyui-mixlab-nodes && \
-    pip3 install -r requirements.txt
+# # Ccomfyui-mixlab-nodes
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/shadowcz007/comfyui-mixlab-nodes.git && \
+#     cd comfyui-mixlab-nodes && \
+#     pip3 install -r requirements.txt
 
 ## WARNING this module currently relies on an old numpy and is therefore excluded
 # # comfyui-reactor-node
@@ -222,9 +227,9 @@ RUN cd /ComfyUI/custom_nodes && \
 RUN mkdir -p /ComfyUI/models/insightface && \
     wget -q "https://huggingface.co/ezioruan/inswapper_128.onnx/resolve/main/inswapper_128.onnx?download=true" -O /ComfyUI/models/insightface/inswapper_128.onnx
 
-# cg-use-everywhere
-RUN cd /ComfyUI/custom_nodes && \
-    git clone https://github.com/chrisgoringe/cg-use-everywhere.git
+# # cg-use-everywhere
+# RUN cd /ComfyUI/custom_nodes && \
+#     git clone https://github.com/chrisgoringe/cg-use-everywhere.git
 
 # # ComfyUI-CogVideoXWrapper
 # RUN cd /ComfyUI/custom_nodes && \
